--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>View PDF</h1>
-  <a href="LuciaMusituCV.pdf" target="_blank">Open PDF</a>
+  <embed src="LuciaMusituCV.pdf" type="application/pdf" width="100%" height="600px"/>
 </body>
 </html>
